--- a/web/index.html
+++ b/web/index.html
@@ -29,85 +29,89 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.ico"/>
 
-  <!-- Google Sign In dev -->
-  <meta name="google-signin-client_id" content="211142420724-tr76v74bjhuc33m0gqbhsdqa0hb9tp5m.apps.googleusercontent.com">
-  <!-- Google Sign In prod -->
-<!--  <meta name="google-signin-client_id" content="211142420724-tr76v74bjhuc33m0gqbhsdqa0hb9tp5m.apps.googleusercontent.com">-->
+  <!-- Google Sign In -->
+  <meta name="google-signin-client_id" content="823395646309-9d46o4tsq5gavq6inivivorj48rig9p4.apps.googleusercontent.com">
 
   <title>vietlite</title>
   <link rel="manifest" href="manifest.json">
+  <link rel="preload" as="script" href="flutter.js">
+  <link rel="preload" as="script" href="main.dart.js">
+  <link rel="preload" as="image" href="assets/intro_body.png" fetchpriority="high">
 </head>
 <body>
-  <script>
-    {{flutter_js}}
-    {{flutter_build_config}}
+<script>
+  {{flutter_js}}
+  {{flutter_build_config}}
 
-    // 1. Inject the CSS spinner animation into the page
-    const style = document.createElement('style');
-    style.innerHTML = `
-      @keyframes spin {
-        0% { transform: rotate(0deg); }
-        100% { transform: rotate(360deg); }
-      }
+  // 1. Inject the CSS spinner animation into the page
+  const style = document.createElement('style');
+  style.innerHTML = `
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
 
-      .spinner {
-        border: 4px solid #ccc;
-        border-top: 4px solid #333;
-        border-radius: 50%;
-        width: 30px;
-        height: 30px;
-        animation: spin 1s linear infinite;
-      }
-    `;
-    document.head.appendChild(style);
+    .spinner {
+      border: 4px solid #ccc;
+      border-top: 4px solid #333;
+      border-radius: 50%;
+      width: 30px;
+      height: 30px;
+      animation: spin 1s linear infinite;
+    }
+  `;
+  document.head.appendChild(style);
 
-    // 2. Create splash screen container
-    const splash = document.createElement('div');
-    splash.id = 'splash-screen';
-    splash.style.position = 'fixed';
-    splash.style.inset = '0';
-    splash.style.zIndex = '9999';
-    splash.style.backgroundColor = 'white';
-    splash.style.display = 'flex';
-    splash.style.alignItems = 'center';
-    splash.style.justifyContent = 'center';
-    splash.style.flexDirection = 'column';
+  // 2. Create splash screen container
+  const splash = document.createElement('div');
+  splash.id = 'splash-screen';
+  splash.style.position = 'fixed';
+  splash.style.inset = '0';
+  splash.style.zIndex = '9999';
+  splash.style.backgroundColor = 'white';
+  splash.style.display = 'flex';
+  splash.style.alignItems = 'center';
+  splash.style.justifyContent = 'center';
+  splash.style.flexDirection = 'column';
 
-    // 3. Create and configure the image element
-    const img = document.createElement('img');
-    img.src = 'assets/intro_body.png';
-    img.alt = 'Splash';
-    img.style.maxWidth = '60vw';  // full width on landscape
-    img.style.maxHeight = '60vh'; // full height on portrait
-    img.style.width = 'auto';
-    img.style.height = 'auto';
-    img.style.objectFit = 'cover';
-    img.style.marginBottom = '20px';
+  // 3. Create and configure the image element
+  const img = document.createElement('img');
+  img.src = 'assets/intro_body.png';
+  img.alt = 'Splash';
+  img.setAttribute('fetchpriority', 'high');
+  img.style.maxWidth = '60vw';  // full width on landscape
+  img.style.maxHeight = '60vh'; // full height on portrait
+  img.style.width = 'auto';
+  img.style.height = 'auto';
+  img.alt = 'chat logo';
+  img.style.objectFit = 'cover';
+  img.style.marginBottom = '20px';
 
-    // 4. Create the spinner element
-    const spinner = document.createElement('div');
-    spinner.className = 'spinner';
+  // 4. Create the spinner element
+  const spinner = document.createElement('div');
+  spinner.className = 'spinner';
 
-    splash.appendChild(img);
-    splash.appendChild(spinner);
-    document.body.appendChild(splash);
+  splash.appendChild(img);
+  splash.appendChild(spinner);
+  document.body.appendChild(splash);
 
-    // 5. Load Flutter
-    _flutter.loader.load({
-      onEntrypointLoaded: async function(engineInitializer) {
-        // Optional: You can delay slightly here if you want the video to play longer
+  // 5. Load Flutter
+  _flutter.loader.load({
+    onEntrypointLoaded: async function(engineInitializer) {
+      // Optional: You can delay slightly here if you want the video to play longer
 
-        const appRunner = await engineInitializer.initializeEngine();
+      const appRunner = await engineInitializer.initializeEngine();
 
-        // 4. Hide splash screen once Flutter is ready
-        splash.style.opacity = '0';
+      await appRunner.runApp();
+
+      window.addEventListener('flutter-first-frame', () => {
         splash.style.transition = 'opacity 0.3s ease';
+        splash.style.opacity = '0';
         setTimeout(() => splash.remove(), 300);
-
-        await appRunner.runApp();
-      }
-    });
-  </script>
+      });
+    }
+  });
+</script>
 </body>
 
 </html>
